--- a/src/EGHealsApp/EGHeals.Application/EGHeals.Application.csproj
+++ b/src/EGHealsApp/EGHeals.Application/EGHeals.Application.csproj
@@ -6,4 +6,30 @@
     <Nullable>enable</Nullable>
   </PropertyGroup>
 
+  <ItemGroup>
+    <Folder Include="Features\Allowances\Commands\DeleteAllowance\" />
+    <Folder Include="Features\Allowances\Queries\" />
+    <Folder Include="Features\Branches\Queries\" />
+    <Folder Include="Features\Patients\Queries\" />
+    <Folder Include="Features\Radiologists\Queries\" />
+    <Folder Include="Features\ReferralDoctors\Queries\" />
+    <Folder Include="Features\Stocks\Queries\" />
+    <Folder Include="Features\Stores\Queries\" />
+    <Folder Include="Features\TeamWorkMembers\Queries\" />
+    <Folder Include="Features\Technicians\Queries\" />
+    <Folder Include="Features\Users\Commands\LoginUser\" />
+    <Folder Include="Features\Users\Queries\GetUsers\" />
+  </ItemGroup>
+
+  <ItemGroup>
+    <PackageReference Include="Microsoft.AspNetCore.Identity" Version="2.3.1" />
+  </ItemGroup>
+
+  <ItemGroup>
+    <ProjectReference Include="..\BuildingBlocks.DataAccessAbstraction\BuildingBlocks.DataAccessAbstraction.csproj" />
+    <ProjectReference Include="..\BuildingBlocks\BuildingBlocks.csproj" />
+    <ProjectReference Include="..\EGHeals.Domain\EGHeals.Domain.csproj" />
+    <ProjectReference Include="..\EGHeals.Localization\EGHeals.Localization.csproj" />
+  </ItemGroup>
+
 </Project>
